# algocol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/binarysearch/: mod.rs
src/error/: mod.rs
src/graph/: maps.rs
src/macros/: mod.rs
src/sort/: bubblesort.rs  insertionsort.rs  mergesort.rs  mod.rs  quicksort.rs  selectionsort.rs  timsort.rs
src/traits/: mod.rs
src/utils/: mod.rs  priority.rs  slice.rs
tests/: binarysearch.rs  experiments.rs  macros.rs  sorting.rs
